# flora-ocr

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  pyproject.toml
experiments/: ocr_deepseek.py  ocr_with_marker.py  ocr_with_mineru_diffusion.py
floras/flore_du_gabon/: download.sh  flora.toml  patches_vol11.json  vol11_myrtaceae.keys.json  vol11_thymelaeaceae.keys.json
ocr_output/Aizoaceae_vol42_liteparse/: figures.md  metadata.json  text.md
ocr_output/Alismataceae_vol38_liteparse/: figures.md  metadata.json  text.md
ocr_output/Aloaceae_vol47_liteparse/: figures.md  metadata.json  text.md
ocr_output/Anacardiaceae_vol50_liteparse/: figures.md  metadata.json  text.md
ocr_output/Ancistrocladaceae_vol60_liteparse/: figures.md  metadata.json  text.md
ocr_output/Annonaceae_vol16_mineru/: figures.md  metadata.json  text.md  text_keyfmt.md
ocr_output/Anthericaceae_vol41_liteparse/: figures.md  metadata.json  text.md
ocr_output/Apiaceae_vol38_liteparse/: figures.md  metadata.json  text.md
ocr_output/Apocynaceae_vol59_liteparse/: figures.md  metadata.json  text.md
ocr_output/Apodanthaceae_vol40_liteparse/: figures.md  metadata.json  text.md
ocr_output/Arecaceae_vol53_liteparse/: figures.md  metadata.json  text.md
ocr_output/Aristolochiaceae_vol42_liteparse/: figures.md  metadata.json  text.md
ocr_output/Balanophoraceae_vol40_liteparse/: figures.md  metadata.json  text.md
ocr_output/Begoniaceae_vol39_liteparse/: figures.md  metadata.json  (+1 more)
scripts/: runpod_setup.sh
wiki/: AGENTS.md  CLAUDE.md  index.md  log.md  overview.md  sources
(+286 files in other folders)
